--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "normalize-mongoose": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
